--- a/mytrips.html
+++ b/mytrips.html
@@ -109,6 +109,13 @@
           </form>
       </div>
     </div>
+
+  <!-- Check Shows Modal -->
+    <div id="mapmodal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+      </div>
+    </div>
   <!-- FOOTER -->
     <footer>
       <p class="pull-right"><a href="#">Back to top</a></p>
