APIs now returning shows, venue name/address

--- a/index.html
+++ b/index.html
@@ -27,13 +27,12 @@
              <a class="navbar-brand" href="index.html">NSN</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
-                  <ul class="nav navbar-nav">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="mytrips.html">My Trips</a></li>
-                    <li><a href="account.html">Account</a></li>
-                    <li class="dropdown">
-                  </ul>
-                </li>
+              <ul class="nav navbar-nav">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="mytrips.html">My Trips</a></li>
+                <li><a href="account.html">Account</a></li>
+                <li><a id="logout">Log Out</a></li>
+                <li class="dropdown"></li>
               </ul>
             </div>
           </div>
