Added map modal to destination page. Still needs a lot of work - geocoder.geocode is undefined is driving me right up the wall

--- a/index.html
+++ b/index.html
@@ -147,7 +147,6 @@
           <input id="address" type="textbox" value="San Francisco">
           <input id="submit" type="button" value="Geocode">
         </div>
-    
       <div id="map"></div>
 
 
@@ -180,6 +179,7 @@
         messagingSenderId: "593100455307"
       };
       firebase.initializeApp(config);
+      var page = "index"
     </script>
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -221,6 +221,5 @@
     </script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCKgqILnUfcbks-G_f0KfFU-ENQ4fod09E&callback=initMap">
     </script>
-
   </body>
 </html>
