--- a/mytrips.html
+++ b/mytrips.html
@@ -9,10 +9,9 @@
     <link href="https://fonts.googleapis.com/css?family=Crushed|Cuprum|PT+Sans" rel="stylesheet">
   <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-      <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <!-- <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet"> -->
   <!-- Custom styles for this template -->
     <link href="style/style.css" rel="stylesheet">
+
   </head>
 
   <body>
@@ -110,10 +109,11 @@
       </div>
     </div>
 
-  <!-- Check Shows Modal -->
+  <!-- Map Shows Modal -->
     <div id="mapmodal" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
+          <div id='map'></div>
       </div>
     </div>
   <!-- FOOTER -->
@@ -150,13 +150,37 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- <script src="../../dist/js/bootstrap.min.js"></script> -->
-    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <!-- <script src="../../assets/js/vendor/holder.min.js"></script> -->
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <!-- <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script> -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="javascript/javascript.js"></script>
+        <script>
+      function initMap() {
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 12,
+          center: {lat: 37.7936684, lng: -122.3957547}
+        });
+        var geocoder = new google.maps.Geocoder();
+          geocodeAddress(geocoder, map);
+        };
 
+      // window.initMap = initMap;
+
+      function geocodeAddress(geocoder, resultsMap) {
+        debugger;
+        var address = tempaddress
+        geocoder.geocode({'address': address}, function(results, status) {
+          if (status === 'OK') {
+            resultsMap.setCenter(results[0].geometry.location);
+            var marker = new google.maps.Marker({
+              map: resultsMap,
+              position: results[0].geometry.location
+            });
+          } else {
+            alert('Geocode was not successful for the following reason: ' + status);
+          }
+        });
+      }
+    </script>
+    <script type="text/javascript" src="javascript/javascript.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCKgqILnUfcbks-G_f0KfFU-ENQ4fod09E"
+    async defer></script>
   </body>
 </html>
