Changed Date format and everything that entails with jQuery. Map is loading shows, now I need show info on the pins

--- a/mytrips.html
+++ b/mytrips.html
@@ -93,13 +93,17 @@
             <span class="glyphicon glyphicon-tent"></span>
             <input type="text" name="newdestloc" class="modalinput" id="newdestloc"><br>
           <!-- Arrival Date -->
-            <label for="newdestarr">Arrival Date</label><br>
+            <label for="newdestarr">Arrival DD/MM/YYYY</label><br>
             <span class="glyphicon glyphicon-calendar"></span>
-            <input type="text" name="newdestarr" class="modalinput" id="newdestarr"><br>
+            <input type="text" name="newdestarrd" class="modalinput destday" id="newdestarrd">
+            <input type="text" name="newdestarrm" class="modalinput destmonth" id="newdestarrm">
+            <input type="text" name="newdestarry" class="modalinput destyear" id="newdestarry"><br>
           <!-- Departure Date -->
-            <label for="newdestdept">Departure Date</label><br>
+            <label for="newdestdept">Departure DD/MM/YYYY</label><br>
             <span class="glyphicon glyphicon-calendar"></span>
-            <input type="text" name="newdestdept" class="modalinput" id="newdestdept"><br>
+            <input type="text" name="newdestdeptd" class="modalinput destday" id="newdestdeptd">
+            <input type="text" name="newdestdeptm" class="modalinput destmonth" id="newdestdeptm">
+            <input type="text" name="newdestdepty" class="modalinput destyear" id="newdestdepty"><br>
           <!-- Comments -->
             <label for="newdestcomm">Comments about this Destination</label><br>
             <span class="glyphicon glyphicon-comment"></span>
