--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
       <!-- Modal content -->
       <div class="modal-content">
         <span class="close">&times;</span>
-          <form class="modalform"> <!-- Adding a trip -->
+          <div class="modalform"> <!-- Adding a trip -->
             <label for="email" class="">Email</label><br>
             <input type="email" name="returninguseremail" class="modalinput" id="returninguseremail"><br>
             <label for="returninguserpw">Password</label><br>
             <input type="password" name="returninguserpw" class="modalinput" id="returninguserpw"><br>
             <input type="submit" id="returningusersubmit">
             <p style="visibility:hidden" class="returningusererrormsg">Your email or password is incorrect. Please try again.</p>
-          </form>
+          </div>
       </div>
 
     </div>
