--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <!-- Modal content -->
       <div class="modal-content">
         <span class="close">&times;</span>
-          <form class="modalform"> <!-- Adding a trip -->
+          <div class="modalform"> <!-- Adding a trip -->
             <label for="newuseremail" class="">Enter Email</label><br>
             <input type="email" name="newuseremail" class="modalinput" id="newuseremail"><br>
             <label for="newuserpw">Enter a password</label><br>
@@ -73,7 +73,7 @@
             <input type="password" name="newuserconfirm" class="modalinput" id="newuserconfirm"><br>
             <input type="submit" id="newusersubmit">
             <p style="visibility:hidden" class="errormsg">Your passwords must match</p>
-          </form>
+          </div>
       </div>
 
     </div>
