Changed forms to divs again

--- a/mytrips.html
+++ b/mytrips.html
@@ -65,13 +65,13 @@
       <!-- Modal content -->
       <div class="modal-content">
         <span class="close">&times;</span>
-          <form class="modalform"> <!-- Adding a trip -->
+          <div class="modalform"> <!-- Adding a trip -->
             <label for="newtripname" class="pushright">Name your Trip</label><br>
             <input type="text" name="newtripname" class="modalinput" id="newtripname"><br>
             <label for="newtripdescrip">Describe your Trip</label><br>
             <input type="text" name="newtripdescrip" class="modalinput" id="newtripdescrip"><br>
             <input type="submit" id="newtripsubmit">
-          </form>
+          </div>
       </div>
 
     </div>
@@ -81,7 +81,7 @@
       <!-- Modal content -->
       <div class="modal-content">
         <span class="close">&times;</span>
-          <form class="modalform">
+          <div class="modalform">
           <!-- Destination Name -->
             <label for="newdestname" class="">New Destination Name</label><br>
             <span class=" glyphicon glyphicon-tag"></span>
@@ -107,7 +107,7 @@
             <span class="glyphicon glyphicon-comment"></span>
             <input type="text" name="newdestcomm" class="modalinput" id="newdestcomm"><br>
             <input type="submit" id="newdestsubmit">
-          </form>
+          </div>
       </div>
     </div>
 
